Added defaultGoal to Poms

--- a/html/src/main/webapp/index.html
+++ b/html/src/main/webapp/index.html
@@ -4,6 +4,6 @@
     <title>Main</title>
 </head>
 <body bgcolor="black">
-<script src="Phantasm/Phantasm.nocache.js"></script>
+<script src="Phantasm/Phantasm.nocache.js">Phantasm()</script>
 </body>
 </html>
